Fix profile alignment issues

--- a/app/assets/sass/_base.scss
+++ b/app/assets/sass/_base.scss
@@ -2,5 +2,12 @@
 // Serves as the base file for global styling
 
 .wrapper {
-    max-width: 68em;
+    max-width: 68em; // TODO: Revisit to make it responsive accordingly
+    margin: 0 auto;
+    display: block;
+    padding: rem(10px); // Avoiding squish-iness
+}
+
+button {
+    border: 0;
 }
