--- a/app/assets/sass/_profile.scss
+++ b/app/assets/sass/_profile.scss
@@ -42,6 +42,7 @@
     border-bottom: 2px solid $medium-gray;
     margin-bottom: 20px;
   }
+
   .profile__avatar{
     text-align: center;
     @include media($desktop-small-up) {
@@ -50,6 +51,11 @@
       width: 100px;
     }
   }
+
+  .profile__social-list {
+    margin-top: rem(7px);
+  }
+
   .profile__img{
     @include circle(60px, #fff);
     @include media($desktop-small-up) {
@@ -58,11 +64,17 @@
   }
   .profile__intro-copy{
     text-align: center;
+    max-width: 279px;
+
+    p {
+      margin-bottom: rem(4px);
+      font-size: rem(14px);
+    }
+
     @include media($desktop) {
       text-align: left;
-      width: 360px;
-      float:left;
-      margin-left:15px;
+      float: left;
+      margin-left: rem(20px);
     }
   }
   .profile__intro_name{
